--- a/JamesEsg.ReverseProxy/Dockerfile
+++ b/JamesEsg.ReverseProxy/Dockerfile
@@ -1,15 +1,14 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER $APP_UID
 WORKDIR /app
-EXPOSE 8090
+EXPOSE 8080
+ENV ASPNETCORE_ENVIRONMENT=Production
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["JamesEsg.ReverseProxy.csproj", "JamesEsg.ReverseProxy/"]
-RUN dotnet restore "JamesEsg.ReverseProxy/JamesEsg.ReverseProxy.csproj"
+COPY ["JamesEsg.ReverseProxy.csproj", "."]
+RUN dotnet restore "JamesEsg.ReverseProxy.csproj"
 COPY . .
-WORKDIR "/src/JamesEsg.ReverseProxy"
 RUN dotnet build "JamesEsg.ReverseProxy.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
