update identity hostname to docker hostname

--- a/JamesEsg.ReverseProxy/appsettings.Production.json
+++ b/JamesEsg.ReverseProxy/appsettings.Production.json
@@ -22,7 +22,7 @@
             "auth_cluster": {
                 "Destinations": {
                     "main1": {
-                        "Address": "http://localhost:5050/"
+                        "Address": "http://identity-api:5050/"
                     }
                 }
             }
