add cors policy to route config

--- a/JamesEsg.ReverseProxy/appsettings.Development.json
+++ b/JamesEsg.ReverseProxy/appsettings.Development.json
@@ -9,6 +9,7 @@
     "Routes": {
       "auth_route": {
         "ClusterId": "auth_cluster",
+        "CorsPolicy": "AllowAny",
         "Match": {
           "Host": "localhost",
           "Path": "/auth/{**catch-all}"
