--- a/JamesEsg.ReverseProxy/appsettings.Production.json
+++ b/JamesEsg.ReverseProxy/appsettings.Production.json
@@ -9,6 +9,7 @@
         "Routes": {
             "auth_route": {
                 "ClusterId": "auth_cluster",
+                "CorsPolicy": "AllowAny",
                 "Match": {
                     "Host": "api-james.esg",
                     "Path": "/auth/{**catch-all}"
